# Learn-Generative-AI

./: Conterization.txt  correcttable.txt  ecom.txt
1_gen_ai_stacks/: ai_stack.ipynb
AI-Agents/crewai/: requirements.txt  tools.py
Api/5_docstring/: pydocs.ipynb
Api/pydantic/: code.ipynb
Api/request/: request.ipynb
Api/severless_postgressSql/: requirements.txt
Api/sqlModel/: main.py
Composio/: composio_multiple_emails.ipynb
Docker/: Docker.ipynb  dev-container.ipynb  docker-compose.ipynb  docker-composedb.ipynb  docker-debug.ipynb
Docker/2_docker-debug/: pyproject.toml
Docker/2_docker-debug/docker_debug/: main.py
Docker/5_compose_db/: compose.yaml
Docker/containerization/: Dockerfile.dev  Dockerfile.prod  pyproject.toml
Docker/docker-debug/: Dockerfile
Kafka/: EventDriven.ipynb
Kafka/1_Event-driven/: EventDriven.ipynb
Kafka/4_Kafka-messaging/: compose.yaml
Kafka/KafkaUi/: KafkaUi.ipynb
Kafka/Kafka_single_node_compose/: Snc.ipynb
Kong/: docker-compose.yml
Kong/codebase/: compose.yaml
Multi-AI-Agent-Systems-with-crewAI/1_Article_Automation/: Research_Write_Article.ipynb
Multi-AI-Agent-Systems-with-crewAI/2_Customer_Support_Automation/: Customer Support Automation.ipynb
Open-source-LLMS/: 0_Open-source.ipynb  1_Llama_2_LangChain.ipynb  2_How_to_run_Llama_2.ipynb  How_to_run_Llama_2.ipynb  Llama_2_LangChain.ipynb
Project/: financial.ipynb  machinelearning.csv  mcq.ipynb
Project/AsKPakTour/: assistant.py  functions.py  main.py
Project/AsKPakTour/backend/: Dockerfile  pyproject.toml
Project/AsKPakTour/backend/app/: assistant.py  main.py
Project/AskPaktour/: Paktour.ipynb  chatbot.ipynb  requirements.txt
Project/ChatbotUsingObjectBox/: chatbot.ipynb
Project/CrewAiAsk/: compose.yaml
Project/CrewAiAsk/backend/: Dockerfile  pyproject.toml
Project/CrewAiAsk/crewbackend/: pyproject.toml
Project/CrewAiAsk/crewbackend/app/: main.py
Project/CrewAiAsk/crewbackend/db/: chroma.sqlite3
Project/CrewAiAsk2/: main.py
Prompt-Engineering/: Prompt.ipynb  l2-guidelines.ipynb  l3-iterative-prompt-development.ipynb  l4-summarizing.ipynb  l5-inferring.ipynb  l6-transforming.ipynb  l7-expanding.ipynb
ai_assisted_development/: file1.py
ai_travel_agent/: assistant.py  functions.py  requirements.txt  streamlit.py
azure_container_apps/3-github_actions_CICD/: pyproject.toml
azure_container_apps/3-github_actions_CICD/.github/workflows/: deploy.yml
class1/: class1.ipynb
class2/: class2.ipynb
class4(Function-Calling)/: classf.ipynb
class4(KnowRetrieval-FunctionCal(/: class4.ipynb
class6(FIneTuning)/: class6.ipynb
class_freebootcamp/: testopenaiapi.ipynb
cloud_native_ai/: cloudnative.ipynb
compound-ai-systems/: compound.ipynb
crewai/: agents.py  crew.py  crewai.ipynb  task.py
fastApi/hello/: hello.py  (+1 more)
genai_foundations/: 4_Deep-dive-NLP.ipynb  Deep-dive-Transformer.ipynb  GAI.ipynb  discrminative_vs_generative.ipynb
langchain/: 01_conditional_edge.ipynb  LangChain_with_Gemini.ipynb  class.ipynb  langchain.ipynb  requirements.txt
langgraph/: langgraph.ipynb
oauth2_auth/generate_access_token/auth_service/: Dockerfile  pyproject.toml
oauth2_auth/generate_access_token/auth_service/app/: main.py
openAi/: testopenaiapi and langchain (1).ipynb
poetry/fast-api/: pyproject.toml
poetry/fast-api/fast_api/: main.py
poetry/fast-api/tests/: test_main.py
poetry/online-class/: pyproject.toml
poetry/online-class/online_class/: main.py
poetry/online-class/tests/: test_myproject.py
quizApi/: main.py  model.py
serverless-container/: azure-containers-app.ipynb  serverless.ipynb
streamlit/: basics.py  hello.py  magic.py
todoApp/: create_db.py  database.py  main.py  models.py  nodejs_console_client.ts  package-lock.json  package.json  python_console_client.py  streamlit_client.py  test_api.py
vectorDatabase/: 1_vector.ipynb  PinecoeVsChromadb.ipynb  Pineconevectordb.ipynb  chromadb.ipynb  vector.ipynb
(+281 files in other folders)
