[tool.poetry]
name = "docker-debug"
version = "0.1.0"
description = ""
authors = ["areebahmed575 <areebahmed575@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
