[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["areebahmed575 <areebahmed575@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
sqlmodel = "^0.0.22"
crewai = "0.28.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
