[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Areeb Ahmed <areebahemd575@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"